# Pokemon_Team_Maker

./: .env.example  .gitignore  Dockerfile  Domain.puml  README.md  UseCases.puml  entrypoint.sh  front.html  pokemon_team_manager.json  pyproject.toml
.github/workflows/: deploy.yml
Pokemon Team Builder/: bruno.json  collection.bru
Pokemon Team Builder/Auth/: Login.bru  Register.bru
Pokemon Team Builder/Teams/: Add Pokemon.bru  Create Team.bru  Delete Pokemon.bru  My Teams.bru  Pokemon In Team.bru  Remove Team.bru  Update Team Name.bru
app/: app.py  config.py  database.py  dependencies.py  models.py
app/routers/: auth.py  teams.py  users.py
