[project]
name = "pokemon-team-maker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13.1"
dependencies = [
    "argon2-cffi>=25.1.0",
    "fastapi>=0.128.6",
    "pydantic-settings>=2.12.0",
    "pyjwt>=2.11.0",
    "sqlmodel>=0.0.32",
    "uvicorn>=0.40.0",
]
